--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="style.css">
     </head>
     <body>
-<img class="img1" src="Screenshot 2024-10-10 180934.png" width="400" height="300">
+<img class="img1" src="Cer Logo.png" width="400" height="300">
 <div class="grid-container">
     <div class="card">
         <a class="a9">Сайтът все още се разработва!</a>
