--- a/Pants.html
+++ b/Pants.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device">
 <title>Панталони - Cer Clothing</title>
-<link rel="shortcut icon" href="f:\Logo2.png">
+<link rel="shortcut icon" href="Logo2.png">
 <link rel="stylesheet" href="style3.css">
     </head>
     <body>
