--- a/shirts.html
+++ b/shirts.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="style2.css">
     </head>
     <body>
-<img class="img1" src="f:\Cer Logo.png" width="400" height="300">
+<img class="img1" src="Logo.png" width="400" height="300">
 <div class="grid-container">
     <div class="card">
         <a class="a9">Сайтът все още се разработва!</a>
