--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <img src="Screenshot 2024-10-08 220803.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Къси бели карго панталони<br>Цена: 40лв<br>Размер: L</h5>
-              <a href=""><button type="button" class="btn btn-secondary btn-lg">КУПИ</button></a>
+              <a href="KusiBeliDunki.html"><button type="button" class="btn btn-secondary btn-lg">КУПИ</button></a>
             </div>
           </div>
         </div>
@@ -114,7 +114,7 @@
             <img src="Screenshot 2024-10-08 232054.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Къси (бежово/бели) дънки<br>Цена: 30лв<br>Размер: M</h5>
-              <a href=""><button type="button" class="btn btn-secondary btn-lg">КУПИ</button></a>
+              <a href="KusiBejavviDunki.html"><button type="button" class="btn btn-secondary btn-lg">КУПИ</button></a>
             </div>
           </div>
         </div>
