--- a/accssesories.html
+++ b/accssesories.html
@@ -59,7 +59,7 @@
       </nav><br>
       <div class="card-group">
         <div class="card">
-          <img src="f:\trapstar 1.png" class="card-img-top" alt="...">
+          <img src="https://frankfurt.apollo.olxcdn.com/v1/files/8p1kewq8a7be2-BG/image;s=1000x700" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">[НОВО!] Оригинална Trapstar Reflective чанта на перфектна цена!</h5>
           </div>
