--- a/Chanta.html
+++ b/Chanta.html
@@ -69,7 +69,7 @@
           <li class="list-group-item">- Чантата е чисто нова и не използвана - Черен цвят reflective (Светло отразителна) - Ако имате въпроси или искате допълнителни снимки ми пишете. - На най-добрата цена на пазара. - Идват с преглед и тест.</li>
           <li class="list-group-item">Цена: 50лв</li>
           <li class="list-group-item">За повече информация пишете на лично съобщение!</li>
-          <li class="list-group-item"><a href="https://www.olx.bg/d/ad/novo-originalna-trapstar-reflective-chanta-na-perfektna-tsena-CID655-ID9EUDc.html?bs=olx_pro_listing&isPreviewActive=0&sliderIndex=5" class="btn btn-primary">КУПИ</a></li>
+          <li class="list-group-item"><a href="https://www.olx.bg/d/ad/novo-trapstar-reflective-chanta-na-perfektna-tsena-CID655-ID9GqTi.html?bs=olx_pro_listing" class="btn btn-primary">КУПИ</a></li>
         </ul>
       </div>
 </body>
